# src/api/inferredTypes.ts
@@ -40,7 +40,9 @@ export type SessionSettings = z.infer<typeof schemas.SessionSettings>;
 export type Session = z.infer<typeof schemas.Session>;
 export type CreateSessionRequest = z.infer<typeof schemas.CreateSessionRequest>;
 export type UpdateSessionRequest = z.infer<typeof schemas.UpdateSessionRequest>;
+export type TeamStatus = z.infer<typeof schemas.TeamStatus>;
 export type Team = z.infer<typeof schemas.Team>;
 export type CreateTeamRequest = z.infer<typeof schemas.CreateTeamRequest>;
 export type Match = z.infer<typeof schemas.Match>;
 export type CreateMatchRequest = z.infer<typeof schemas.CreateMatchRequest>;
+export type ReportMatchResultRequest = z.infer<typeof schemas.ReportMatchResultRequest>;
